--- a/Players.html
+++ b/Players.html
@@ -24,8 +24,8 @@
             <li><a href="about.html">About</a></li>
             <li><a href="Players.html">Players</a></li>
             <li><a href="Schedule.html">Schedule/Tickets</a></li>
-            <li><a href="#">Trophies</a></li>
-            <li><a href="#">References</a></li>
+            <li><a href="Trophies.html">Trophies</a></li>
+            <li><a href="References.html">References</a></li>
           </ul>
         </div>
         </div>
