--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@
         <div class="container-inner">
           <div class="navbar_square">
             <ul>
-              <li><a href="index.html">Home</a></li>
+              <li><a href="Index.html">Home</a></li>
               <li><a href="about.html">About</a></li>
               <li><a href="Players.html">Players</a></li>
               <li><a href="Schedule.html">Schedule/Tickets</a></li>
-              <li><a href="#">Trophies</a></li>
-              <li><a href="#">References</a></li>
+              <li><a href="Trophies.html">Trophies</a></li>
+              <li><a href="References.html">References</a></li>
             </ul>
           </div>
         </div>
