--- a/References.html
+++ b/References.html
@@ -33,72 +33,86 @@
   </div>
   <div id="content">
     <div id="main-content">
-      <p>
-        Ryujin Nippon Mark. (n.d.). JVA (Japanese Volleyball Association). Retrieved June 21, 2023, from <a href="https://www.jva.or.jp/en/senior_men/nickname.html">https://www.jva.or.jp/en/senior_men/nickname.html</a>
-      </p>
-      <p>
-        ClassicVector. (n.d.). Movie award win ceremony flat vector illustration. Smiling men in tuxedos cartoon character. Happy actor holding trophy, gold statuette. Cinema industry, show business. Shutterstock. Retrieved June 21, 2023, from <a href="https://www.shutterstock.com/image-vector/movie-award-win-ceremony-flat-vector-1482953243">https://www.shutterstock.com/image-vector/movie-award-win-ceremony-flat-vector-1482953243</a>
-      </p>
-      <p>
-        VNL Logo. (n.d.). Volley Nations League. Retrieved June 21, 2023, from <a href="https://en.volleyballworld.com/volleyball/competitions/vnl-2023/schedule/16153/">https://en.volleyballworld.com/volleyball/competitions/vnl-2023/schedule/16153/</a>
-      </p>
-      <p>
-        JVA Logo. (n.d.). JVA (Japanese Volleyball Association). Retrieved June 21, 2023, from <a href="https://www.jva.or.jp/en/senior_men/nickname.html">https://www.jva.or.jp/en/senior_men/nickname.html</a>
-      </p>
-      <p>
-        JVA Logo. (n.d.). JVA (Japanese Volleyball Association). Retrieved June 21, 2023, from <a href="https://www.jva.or.jp/en/senior_men/nickname.html">https://www.jva.or.jp/en/senior_men/nickname.html</a>
-      </p>
-      <p>
-        MyNavi Logo. (n.d.). MyNavi. Retrieved June 21, 2023, from <a href="https://www.mynavi.jp/">https://www.mynavi.jp/</a>
-      </p>
-      <p>
-        FIVB Logo. (n.d.). FIVB. Retrieved June 21, 2023, from <a href="https://www.fivb.com/">https://www.fivb.com/</a>
-      </p>
-      <p>
-        Hisamitsu Logo. (n.d.). Hisamitsu. Retrieved June 21, 2023, from <a href="https://www.hisamitsu.co.jp/">https://www.hisamitsu.co.jp/</a>
-      </p>
-      <p>
-        Japanet Logo. (n.d.). Japanet. Retrieved June 21, 2023, from <a href="https://www.japanet.co.jp/">https://www.japanet.co.jp/</a>
-      </p>
-      <p>
-        Mikasa Logo. (n.d.). Mikasa. Retrieved June 21, 2023, from <a href="https://www.mikasasports.co.jp/">https://www.mikasasports.co.jp/</a>
-      </p>
-      <p>
-        Mizuno Logo. (n.d.). Mizuno. Retrieved June 21, 2023, from <a href="https://www.mizuno.com/">https://www.mizuno.com/</a>
-      </p>
-      <p>
-        Molten Logo. (n.d.). Molten. Retrieved June 21, 2023, from <a href="https://www.molten.co.jp/">https://www.molten.co.jp/</a>
-      </p>
-      <p>
-        ANA Logo. (n.d.). ANA. Retrieved June 21, 2023, from <a href="https://www.ana.co.jp/">https://www.ana.co.jp/</a>
-      </p>
-      <p>
-        ASICS Logo. (n.d.). ASICS. Retrieved June 21, 2023, from <a href="https://www.asics.com/">https://www.asics.com/</a>
-      </p>
-      <p>
-        AVC Logo. (n.d.). AVC. Retrieved June 21, 2023, from <a href="https://asianvolleyball.net/">https://asianvolleyball.net/</a>
-      </p>
-      <p>
-        Capcom Logo. (n.d.). Capcom. Retrieved June 21, 2023, from <a href="https://www.capcom.co.jp/">https://www.capcom.co.jp/</a>
-      </p>
-      <p>
-        Chuo Nittochi Logo. (n.d.). Chuo Nittochi. Retrieved June 21, 2023, from <a href="https://www.chuo-nittochi.co.jp/">https://www.chuo-nittochi.co.jp/</a>
-      </p>
-      <p>
-        JTEKT Logo. (n.d.). JTEKT. Retrieved June 21, 2023, from <a href="https://www.jtekt.co.jp/">https://www.jtekt.co.jp/</a>
-      </p>
-      <p>
-        Marudai Logo. (n.d.). Marudai. Retrieved June 21, 2023, from <a href="https://www.marudai-food.co.jp/">https://www.marudai-food.co.jp/</a>
-      </p>
-      <p>
-        Tezuka Productions Logo. (n.d.). Tezuka Productions. Retrieved June 21, 2023, from <a href="https://tezukaosamu.net/">https://tezukaosamu.net/</a>
-      </p>
-      <p>
-        Penalty Logo. (n.d.). Penalty. Retrieved June 21, 2023, from <a href="https://www.penalty.co.jp/">https://www.penalty.co.jp/</a>
-      </p>
-      <p>
-        Japanese Volleyball Men's Team Group Photo. (n.d.). JVA (Japanese Volleyball Association). Retrieved June 21, 2023, from <a href="https://www.jva.or.jp/en/senior_men/nickname.html">https://www.jva.or.jp/en/senior_men/nickname.html</a>
-      </p>
+      <div class="square">
+        <h1 style="font-size:40px">
+          &nbsp;&nbsp;References
+        </h1>
+        <div class="row">
+          <div class="column">
+            <p>
+              Ryujin Nippon Mark. (n.d.). JVA (Japanese Volleyball Association). Retrieved June 21, 2023, from <a href="https://www.jva.or.jp/en/senior_men/nickname.html">https://www.jva.or.jp/en/senior_men/nickname.html</a>
+            </p>
+            <p>
+              ClassicVector. (n.d.). Movie award win ceremony flat vector illustration. Smiling men in tuxedos cartoon character. Happy actor holding trophy, gold statuette. Cinema industry, show business. Shutterstock. Retrieved June 21, 2023, from <a href="https://www.shutterstock.com/image-vector/movie-award-win-ceremony-flat-vector-1482953243">https://www.shutterstock.com/image-vector/movie-award-win-ceremony-flat-vector-1482953243</a>
+            </p>
+            <p>
+              VNL Logo. (n.d.). Volley Nations League. Retrieved June 21, 2023, from <a href="https://en.volleyballworld.com/volleyball/competitions/vnl-2023/schedule/16153/">https://en.volleyballworld.com/volleyball/competitions/vnl-2023/schedule/16153/</a>
+            </p>
+            <p>
+              JVA Logo. (n.d.). JVA (Japanese Volleyball Association). Retrieved June 21, 2023, from <a href="https://www.jva.or.jp/en/senior_men/nickname.html">https://www.jva.or.jp/en/senior_men/nickname.html</a>
+            </p>
+            <p>
+              JVA Logo. (n.d.). JVA (Japanese Volleyball Association). Retrieved June 21, 2023, from <a href="https://www.jva.or.jp/en/senior_men/nickname.html">https://www.jva.or.jp/en/senior_men/nickname.html</a>
+            </p>
+            <p>
+              MyNavi Logo. (n.d.). MyNavi. Retrieved June 21, 2023, from <a href="https://www.mynavi.jp/">https://www.mynavi.jp/</a>
+            </p>
+            <p>
+              FIVB Logo. (n.d.). FIVB. Retrieved June 21, 2023, from <a href="https://www.fivb.com/">https://www.fivb.com/</a>
+            </p>
+          </div>
+          <div class="column">
+            <p>
+              Hisamitsu Logo. (n.d.). Hisamitsu. Retrieved June 21, 2023, from <a href="https://www.hisamitsu.co.jp/">https://www.hisamitsu.co.jp/</a>
+            </p>
+            <p>
+              Japanet Logo. (n.d.). Japanet. Retrieved June 21, 2023, from <a href="https://www.japanet.co.jp/">https://www.japanet.co.jp/</a>
+            </p>
+            <p>
+              Mikasa Logo. (n.d.). Mikasa. Retrieved June 21, 2023, from <a href="https://www.mikasasports.co.jp/">https://www.mikasasports.co.jp/</a>
+            </p>
+            <p>
+              Mizuno Logo. (n.d.). Mizuno. Retrieved June 21, 2023, from <a href="https://www.mizuno.com/">https://www.mizuno.com/</a>
+            </p>
+            <p>
+              Molten Logo. (n.d.). Molten. Retrieved June 21, 2023, from <a href="https://www.molten.co.jp/">https://www.molten.co.jp/</a>
+            </p>
+            <p>
+              ANA Logo. (n.d.). ANA. Retrieved June 21, 2023, from <a href="https://www.ana.co.jp/">https://www.ana.co.jp/</a>
+            </p>
+            <p>
+              ASICS Logo. (n.d.). ASICS. Retrieved June 21, 2023, from <a href="https://www.asics.com/">https://www.asics.com/</a>
+            </p>
+          </div>
+          <div class="column">
+            <p>
+            AVC Logo. (n.d.). AVC. Retrieved June 21, 2023, from <a href="https://asianvolleyball.net/">https://asianvolleyball.net/</a>
+            </p>
+            <p>
+              Capcom Logo. (n.d.). Capcom. Retrieved June 21, 2023, from <a href="https://www.capcom.co.jp/">https://www.capcom.co.jp/</a>
+            </p>
+            <p>
+              Chuo Nittochi Logo. (n.d.). Chuo Nittochi. Retrieved June 21, 2023, from <a href="https://www.chuo-nittochi.co.jp/">https://www.chuo-nittochi.co.jp/</a>
+            </p>
+            <p>
+              JTEKT Logo. (n.d.). JTEKT. Retrieved June 21, 2023, from <a href="https://www.jtekt.co.jp/">https://www.jtekt.co.jp/</a>
+            </p>
+          </div>
+          <div class="column">
+             <p>
+                Marudai Logo. (n.d.). Marudai. Retrieved June 21, 2023, from <a href="https://www.marudai-food.co.jp/">https://www.marudai-food.co.jp/</a>
+              </p>
+              <p>
+                Tezuka Productions Logo. (n.d.). Tezuka Productions. Retrieved June 21, 2023, from <a href="https://tezukaosamu.net/">https://tezukaosamu.net/</a>
+              </p>
+              <p>
+                Penalty Logo. (n.d.). Penalty. Retrieved June 21, 2023, from <a href="https://www.penalty.co.jp/">https://www.penalty.co.jp/</a>
+              </p>
+              <p>
+                Japanese Volleyball Men's Team Group Photo. (n.d.). JVA (Japanese Volleyball Association). Retrieved June 21, 2023, from <a href="https://www.jva.or.jp/en/senior_men/nickname.html">https://www.jva.or.jp/en/senior_men/nickname.html</a>
+              </p>
+            </div>
+          </div>
     </div>
   </div>
   <div id="footer">
