--- a/References.html
+++ b/References.html
@@ -33,7 +33,7 @@
   </div>
   <div id="content">
     <div id="main-content">
-      <div class="square">
+      <div class="refersquare">
         <h1 style="font-size:40px">
           &nbsp;&nbsp;References
         </h1>
@@ -97,22 +97,21 @@
             <p>
               JTEKT Logo. (n.d.). JTEKT. Retrieved June 21, 2023, from <a href="https://www.jtekt.co.jp/">https://www.jtekt.co.jp/</a>
             </p>
+            <p>
+              Marudai Logo. (n.d.). Marudai. Retrieved June 21, 2023, from <a href="https://www.marudai-food.co.jp/">https://www.marudai-food.co.jp/</a>
+            </p>
+            <p>
+              Tezuka Productions Logo. (n.d.). Tezuka Productions. Retrieved June 21, 2023, from <a href="https://tezukaosamu.net/">https://tezukaosamu.net/</a>
+            </p>
+            <p>
+              Penalty Logo. (n.d.). Penalty. Retrieved June 21, 2023, from <a href="https://www.penalty.co.jp/">https://www.penalty.co.jp/</a>
+            </p>
+            <p>
+              Japanese Volleyball Men's Team Group Photo. (n.d.). JVA (Japanese Volleyball Association). Retrieved June 21, 2023, from <a href="https://www.jva.or.jp/en/senior_men/nickname.html">https://www.jva.or.jp/en/senior_men/nickname.html</a>
+            </p>
           </div>
-          <div class="column">
-             <p>
-                Marudai Logo. (n.d.). Marudai. Retrieved June 21, 2023, from <a href="https://www.marudai-food.co.jp/">https://www.marudai-food.co.jp/</a>
-              </p>
-              <p>
-                Tezuka Productions Logo. (n.d.). Tezuka Productions. Retrieved June 21, 2023, from <a href="https://tezukaosamu.net/">https://tezukaosamu.net/</a>
-              </p>
-              <p>
-                Penalty Logo. (n.d.). Penalty. Retrieved June 21, 2023, from <a href="https://www.penalty.co.jp/">https://www.penalty.co.jp/</a>
-              </p>
-              <p>
-                Japanese Volleyball Men's Team Group Photo. (n.d.). JVA (Japanese Volleyball Association). Retrieved June 21, 2023, from <a href="https://www.jva.or.jp/en/senior_men/nickname.html">https://www.jva.or.jp/en/senior_men/nickname.html</a>
-              </p>
-            </div>
-          </div>
+        </div>
+      </div>
     </div>
   </div>
   <div id="footer">
