--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div class="container-inner">
           <div class="navbar_square">
             <ul>
-              <li><a href="Index.html">Home</a></li>
+              <li><a href="index.html">Home</a></li>
               <li><a href="about.html">About</a></li>
               <li><a href="Players.html">Players</a></li>
               <li><a href="Schedule.html">Schedule/Tickets</a></li>
